--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -36,7 +36,7 @@
 
         </section>
 
-        <img class="apresentacao__imagem" src="./assets/foto perfil alura .jpeg" alt="Foto do Luca Mazzucchelli">
+        <img class="apresentacao__imagem" src="foto perfil alura .jpeg" alt="Foto do Luca Mazzucchelli">
     </main>
 
     <footer class="rodape">
