--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
     
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -26,21 +26,21 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__navegacao" href="https://www.instagram.com/lucamazzucchelli_/">
-                    <img src="./assets/instagram.png" alt="Logo do aplicatvo Instagram">
+                    <img src="instagram.png" alt="Logo do aplicatvo Instagram">
                     Instagram
                 </a>
                 <a class="apresentacao__links__navegacao" href="https://www.github.com/LucaMazzucchelli">
-                    <img src="./assets/github.png" alt="Foto do logo do GitHub">
+                    <img src="github.png" alt="Foto do logo do GitHub">
                     GitHub
                 </a>
                 <a class="apresentacao__links__navegacao" href="linkedin.com/in/luca-mazzucchelli-dev">
-                    <img src="./assets/linkedin.png" alt="Foto do logo do LinkedIn">
+                    <img src="linkedin.png" alt="Foto do logo do LinkedIn">
                     LinkedIn
                 </a>
             </div>
         </section>
 
-        <img class="apresentacao__imagem" src="./assets/foto perfil alura .jpeg" alt="Foto do Luca Mazzucchelli">
+        <img class="apresentacao__imagem" src="foto perfil alura .jpeg" alt="Foto do Luca Mazzucchelli">
     </main>
 
     <footer class="rodape">
