Update href linkedin index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <img src="github.png" alt="Foto do logo do GitHub">
                     GitHub
                 </a>
-                <a class="apresentacao__links__navegacao" href="linkedin.com/in/luca-mazzucchelli-dev">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/luca-mazzucchelli-dev">
                     <img src="linkedin.png" alt="Foto do logo do LinkedIn">
                     LinkedIn
                 </a>
